Temporary revert to original code from biojava